slides/presentation.1/slides/03_kubernetes_concepts/code-examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-auth
  labels:
    app: api-auth
spec:
  selector:
    matchLabels:
      app: api-auth
  template:
    metadata:
      labels:
        app: api-auth
    spec:
      containers:
      - name: api-auth
        image: api-auth
        imagePullPolicy: Never
        env:
          - name: PORT
            value: '80'
          - name: JWT_ISSUER_URI
            value: http://training.local/api/auth/v1/auth
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: '64Mi'
            cpu: '0'
